--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -682,22 +682,22 @@ jobs:
           keys:
             - pnpm-packages-v2-{{ checksum "pnpm.lock.yaml" }}
       - check-changed:
-          patterns: sdk,contracts-bedrock,contracts
+          patterns: sdk
       # populate node modules from the cache
       - run:
           name: Install dependencies
           command: pnpm install:ci
       - run:
-          name: anvil-l1
+          name: sepolia-fork
           background: true
           # atm this is goerli but we should use mainnet after bedrock is live
-          command: anvil --fork-url $ANVIL_L1_FORK_URL --fork-block-number 9256679
+          command: anvil --fork-url $ANVIL_SEPOLIA_FORK_URL --fork-block-number 5580113 --port 8545
 
       - run:
-          name: anvil-l2
+          name: op-sepolia-fork
           background: true
           # atm this is goerli but we should use mainnet after bedrock is live
-          command: anvil --fork-url $ANVIL_L2_FORK_URL --port 9545 --fork-block-number 11276409
+          command: anvil --fork-url $ANVIL_OP_SEPOLIA_FORK_URL --port 9545 --fork-block-number 9925328
 
       - run:
           name: build
@@ -1545,13 +1545,6 @@ workflows:
           requires:
             - pnpm-monorepo
       - js-lint-test:
-          name: sdk-next-tests
-          coverage_flag: sdk-next-tests
-          package_name: sdk
-          dependencies: "(common-ts|contracts-bedrock|core-utils)"
-          requires:
-            - pnpm-monorepo
-      - js-lint-test:
           name: sdk-tests
           coverage_flag: sdk-tests
           package_name: sdk
@@ -1565,6 +1558,10 @@ workflows:
           name: proxyd-tests
           binary_name: proxyd
           working_directory: proxyd
+      - sdk-next-tests:
+          name: sdk-next-tests
+          requires:
+            - pnpm-monorepo
       - indexer-tests:
           name: indexer-tests<< matrix.fpac >>
           matrix:
