--- a/ops/docker/ci-builder/Dockerfile
+++ b/ops/docker/ci-builder/Dockerfile
@@ -58,7 +58,7 @@ RUN go install github.com/ethereum/go-ethereum/cmd/geth@$(jq -r .geth < versions
 RUN go install gotest.tools/gotestsum@latest
 RUN go install github.com/vektra/mockery/v2@v2.28.1
 RUN go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.54.2
-RUN go install github.com/mikefarah/yq/v4@latest
+RUN go install github.com/mikefarah/yq/v4@v4.43.1
 
 # Strip binaries to reduce size
 RUN strip /go/bin/gotestsum && \
