--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,11 +137,8 @@ jobs:
           command: |
             mkdir -p /testlogs
             gotestsum --format=standard-verbose --junitfile=/tmp/test-results/cannon.xml \
-            -- -parallel=2 -coverpkg=github.com/ethereum-optimism/optimism/cannon/... -coverprofile=coverage.out ./... 2>&1 | tee /testlogs/test.log
+            -- -parallel=2 ./... 2>&1 | tee /testlogs/test.log
           working_directory: cannon
-      - run:
-          name: upload Cannon coverage
-          command: codecov --verbose --clean --flags cannon-go-tests
       - store_test_results:
           path: /tmp/test-results
       - store_artifacts:
