Revert "Disable E2E Plasma Job (#10058)"
This reverts commit 56e23b84eb8176ea8f11d42c53dcddaa30042509.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1663,7 +1663,7 @@ workflows:
           name: op-e2e-action-tests<< matrix.fpac >>
           matrix:
             parameters:
-              fpac: ["", "-fault-proofs"]
+              fpac: ["", "-fault-proofs", "-plasma"]
           module: op-e2e
           target: test-actions
           parallelism: 1
