--- a/ops-bedrock/docker-compose.yml
+++ b/ops-bedrock/docker-compose.yml
@@ -219,7 +219,7 @@ services:
       - "l2_data:/data"
 
   sentinel:
-    image: quarry/sentinel #TODO: We need to pull this image in
+    image: quarry/sentinel # TODO(10141): We need a public image for this (sentinel is out of repo)
     volumes:
       - "${PWD}/../.devnet/rollup.json:/rollup.json"
     # private-key is mnemonic index 5 of the test mnemonic.
