--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1204,7 +1204,7 @@ jobs:
       - run:
           name: Install pnpm
           command: |
-            npm i pnpm --global
+            npm i pnpm@8.15.7 --global
       - run:
           name: git submodules
           command: make submodules
