attempt `ci-builder` fix

--- a/ops/docker/ci-builder/Dockerfile
+++ b/ops/docker/ci-builder/Dockerfile
@@ -4,7 +4,7 @@ FROM --platform=linux/amd64 docker as buildx
 COPY --from=docker/buildx-bin /buildx /usr/libexec/docker/cli-plugins/docker-buildx
 RUN docker buildx version
 
-FROM --platform=linux/amd64 debian:bullseye-slim as rust-build
+FROM --platform=linux/amd64 debian:buster-slim as rust-build
 
 SHELL ["/bin/bash", "-c"]
 
@@ -37,7 +37,7 @@ RUN strip /root/.foundry/bin/forge && \
   strip /root/.foundry/bin/anvil && \
   strip /root/.cargo/bin/svm
 
-FROM --platform=linux/amd64 debian:bullseye-slim as go-build
+FROM --platform=linux/amd64 debian:buster-slim as go-build
 
 RUN apt-get update && apt-get install -y curl ca-certificates jq binutils
 
@@ -68,7 +68,7 @@ RUN strip /go/bin/gotestsum && \
   strip /go/bin/geth && \
   strip /go/bin/yq
 
-FROM --platform=linux/amd64 debian:bullseye-slim as base-builder
+FROM --platform=linux/amd64 debian:buster-slim as base-builder
 
 ENV GOPATH=/go
 ENV PATH=/usr/local/go/bin:$GOPATH/bin:$PATH
