`ci-builder` fix

--- a/ops/docker/ci-builder/Dockerfile
+++ b/ops/docker/ci-builder/Dockerfile
@@ -4,7 +4,7 @@ FROM --platform=linux/amd64 docker as buildx
 COPY --from=docker/buildx-bin /buildx /usr/libexec/docker/cli-plugins/docker-buildx
 RUN docker buildx version
 
-FROM --platform=linux/amd64 debian:buster-slim as rust-build
+FROM --platform=linux/amd64 debian:bullseye-slim as rust-build
 
 SHELL ["/bin/bash", "-c"]
 
@@ -28,16 +28,15 @@ COPY ./versions.json ./versions.json
 COPY ./ops/scripts/install-foundry.sh ./install-foundry.sh
 
 RUN curl -L https://foundry.paradigm.xyz | bash
-RUN source $HOME/.profile && \
-    ./install-foundry.sh && \
-    cargo install svm-rs
+RUN source $HOME/.profile && ./install-foundry.sh
 
 RUN strip /root/.foundry/bin/forge && \
   strip /root/.foundry/bin/cast && \
   strip /root/.foundry/bin/anvil && \
-  strip /root/.cargo/bin/svm
+  strip /root/.cargo/bin/svm && \
+  strip /root/.cargo/bin/just
 
-FROM --platform=linux/amd64 debian:buster-slim as go-build
+FROM --platform=linux/amd64 debian:bullseye-slim as go-build
 
 RUN apt-get update && apt-get install -y curl ca-certificates jq binutils
 
@@ -68,7 +67,7 @@ RUN strip /go/bin/gotestsum && \
   strip /go/bin/geth && \
   strip /go/bin/yq
 
-FROM --platform=linux/amd64 debian:buster-slim as base-builder
+FROM --platform=linux/amd64 debian:bullseye-slim as base-builder
 
 ENV GOPATH=/go
 ENV PATH=/usr/local/go/bin:$GOPATH/bin:$PATH
@@ -100,7 +99,7 @@ ENV NODE_MAJOR=20
 
 RUN /bin/sh -c set -eux; \
   apt-get update; \
-  apt-get install -y --no-install-recommends bash curl openssh-client git build-essential ca-certificates jq gnupg binutils-mips-linux-gnu python3 python3-pip; \
+  apt-get install -y --no-install-recommends bash curl openssh-client git build-essential ca-certificates jq gnupg binutils-mips-linux-gnu python3 python3-pip python3-setuptools; \
   mkdir -p /etc/apt/keyrings; \
   curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg; \
   echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list; \
