--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 parameters:
   ci_builder_image:
     type: string
-    default: us-docker.pkg.dev/oplabs-tools-artifacts/images/ci-builder:v0.47.0
+    default: us-docker.pkg.dev/oplabs-tools-artifacts/images/ci-builder:v0.47.3
   ci_builder_rust_image:
     type: string
     default: us-docker.pkg.dev/oplabs-tools-artifacts/images/ci-builder-rust:latest
@@ -1204,7 +1204,7 @@ jobs:
       - run:
           name: Install pnpm
           command: |
-            npm i pnpm@8.15.7 --global
+            npm i pnpm --global
       - run:
           name: git submodules
           command: make submodules
