chore: `chain-mon` refactoring the code + dependencies

--- a/packages/chain-mon/package.json
+++ b/packages/chain-mon/package.json
@@ -9,22 +9,22 @@
     "dist/*"
   ],
   "scripts": {
-    "dev:balance-mon": "tsx watch ./src/balance-mon/service.ts",
-    "dev:drippie-mon": "tsx watch ./src/drippie-mon/service.ts",
+    "dev:balance-mon": "tsx watch ./internal/balance-mon/service.ts",
+    "dev:drippie-mon": "tsx watch ./contrib/drippie/service.ts",
     "dev:fault-mon": "tsx watch ./src/fault-mon/service.ts",
-    "dev:multisig-mon": "tsx watch ./src/multisig-mon/service.ts",
-    "dev:replica-mon": "tsx watch ./src/replica-mon/service.ts",
-    "dev:wallet-mon": "tsx watch ./src/wallet-mon/service.ts",
+    "dev:multisig-mon": "tsx watch ./internal/multisig-mon/service.ts",
+    "dev:replica-mon": "tsx watch ./contrib/replica-mon/service.ts",
+    "dev:wallet-mon": "tsx watch ./contrib/wallet-mon/service.ts",
     "dev:wd-mon": "tsx watch ./src/wd-mon/service.ts",
-    "dev:initialized-upgraded-mon": "tsx watch ./src/initialized-upgraded-mon/service.ts",
-    "start:balance-mon": "tsx ./src/balance-mon/service.ts",
-    "start:drippie-mon": "tsx ./src/drippie-mon/service.ts",
+    "dev:initialized-upgraded-mon": "tsx watch ./contrib/initialized-upgraded-mon/service.ts",
+    "start:balance-mon": "tsx ./internal/balance-mon/service.ts",
+    "start:drippie-mon": "tsx ./contrib/drippie/service.ts",
     "start:fault-mon": "tsx ./src/fault-mon/service.ts",
-    "start:multisig-mon": "tsx ./src/multisig-mon/service.ts",
-    "start:replica-mon": "tsx ./src/replica-mon/service.ts",
-    "start:wallet-mon": "tsx ./src/wallet-mon/service.ts",
+    "start:multisig-mon": "tsx ./internal/multisig-mon/service.ts",
+    "start:replica-mon": "tsx ./contrib/replica-mon/service.ts",
+    "start:wallet-mon": "tsx ./contrib/wallet-mon/service.ts",
     "start:wd-mon": "tsx ./src/wd-mon/service.ts",
-    "start:initialized-upgraded-mon": "tsx ./src/initialized-upgraded-mon/service.ts",
+    "start:initialized-upgraded-mon": "tsx ./contrib/initialized-upgraded-mon/service.ts",
     "test": "hardhat test",
     "test:coverage": "nyc hardhat test && nyc merge .nyc_output coverage.json",
     "build": "tsc -p ./tsconfig.json",
